fix:  header-features overflow

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ body {
 }
 .header-features-item {
   padding: 1.75rem 3.125rem;
-  min-height: 100%;
+  height: auto;
   width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
 }
